--- a/.env.public
+++ b/.env.public
@@ -3,7 +3,13 @@
 REDIS_PORT="6379"
 REDIS_ADDR="127.0.0.1:$REDIS_PORT"
 
+WORKER_ADDR="0.0.0.0"
+WORKER_PORT="8080"
+
 VITE_WEBSOCKET_URI="ws://127.0.0.1"
 VITE_WEBSOCKET_PORT=8081
 VITE_WEBSOCKET_TIMEOUT=20000
 VITE_WEBSOCKET_RECONNECTION_TIMES=5
+
+# .env structure
+# REDIS_PASSWORD=string
