feat(worker): Impl atomic work ID

--- a/.env.public
+++ b/.env.public
@@ -1,7 +1,16 @@
-# Global config
+# Global config / Constants
 
 REDIS_PORT="6379"
 REDIS_ADDR="127.0.0.1:$REDIS_PORT"
+
+# Pub/Sub
+REDIS_CH_WORK_PROCESS="work:process"
+REDIS_CH_WORK_RESULT="work:result"
+
+REDIS_WORK_PREFIX="work" # Since there's work ID => work:ID:xxx:yyy
+REDIS_WORK_PROCESS="process:data" # Input
+REDIS_WORK_RESULT="result:data" # Output
+REDIS_WORK_STATUS="status"
 
 WORKER_ADDR="0.0.0.0"
 WORKER_PORT="8080"
