feat(deno): Impl integration test (same as the worker one)

--- a/.env.public
+++ b/.env.public
@@ -1,13 +1,13 @@
 # Global config / Constants
 
 REDIS_PORT="6379"
-REDIS_ADDR="127.0.0.1:$REDIS_PORT"
+REDIS_ADDR="127.0.0.1"
 
 # Pub/Sub
 REDIS_CH_WORK_PROCESS="work:process"
 REDIS_CH_WORK_RESULT="work:result"
 
-REDIS_WORK_PREFIX="work" # Since there's work ID => work:ID:xxx:yyy
+REDIS_WORK_PREFIX="work" # Since there's work ID => work:ID:x:y
 REDIS_WORK_PROCESS="process:data" # Input
 REDIS_WORK_RESULT="result:data" # Output
 REDIS_WORK_STATUS="status"
