--- a/backend/deno.json
+++ b/backend/deno.json
@@ -1,8 +1,8 @@
 {
 	"tasks": {
-		"dev": "deno run -RE --watch main.ts",
+		"dev": "deno run -NRE --watch main.ts",
 		"format": "npx prettier . --write"
 	},
 	"imports": { "prettier": "npm:prettier@^3.3.3" },
-	"nodeModulesDir": true
+	"nodeModulesDir": "auto"
 }
