feat(deno): Impl both socket.io and redis && Fix deno socket.io-client tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     worker:
         build:
             context: ./worker
+        depends_on:
+            - redis
         env_file:
             - .env.public
             - .env
