--- a/.env.public
+++ b/.env.public
@@ -15,7 +15,8 @@ REDIS_WORK_STATUS="status"
 WORKER_ADDR="0.0.0.0"
 WORKER_PORT="8080"
 
-VITE_WEBSOCKET_URI="ws://127.0.0.1"
+# VITE_WEBSOCKET_URI="ws://127.0.0.1"
+VITE_WEBSOCKET_URI="ws://192.168.1.19"
 VITE_WEBSOCKET_PORT=8081
 VITE_WEBSOCKET_TIMEOUT=20000
 VITE_WEBSOCKET_RECONNECTION_TIMES=5
