feat: Impl color passing through pubsub/ws/client to have "realtime" data with the WS

--- a/.env.public
+++ b/.env.public
@@ -6,6 +6,8 @@ REDIS_ADDR="127.0.0.1"
 # Pub/Sub
 REDIS_CH_WORK_PROCESS="work:process"
 REDIS_CH_WORK_RESULT="work:result"
+REDIS_CH_COLOR_PROCESS="color:process"
+REDIS_CH_COLOR_RESULT="color:result"
 
 REDIS_WORK_PREFIX="work" # Since there's work ID => work:ID:x:y
 REDIS_WORK_PROCESS="process:data" # Input
